2003-01-02  Steven Tamm  <steventamm@mac.com>

	* scroll-bar.el (toggle-scroll-bar, scroll-bar-mode): Have
	scroll bars correctly default to being on the right for Mac
	Carbon port by testing "mac-carbon" feature, not window-system.

2003-01-02  Markus Rost  <rost@math.ohio-state.edu>

	* cus-edit.el (customize-group, customize-group-other-window): 
	Call custom-load-symbol unconditionally.
	(customize-face, customize-face-other-window): Fix format arg.

2003-01-02  John Paul Wallington  <jpw@shootybangbang.com>

	* menu-bar.el (menu-bar-left-scroll-bar): Set `scroll-bar-mode'
	to `left'.

2003-01-01  Richard M. Stallman  <rms@gnu.org>

	* mail/rmail.el (rmail-reply): Don't call mail-strip-quoted-names.

	* files.el (backup-buffer): Cope if file-modes returns nil.

2002-12-30  Steven Tamm  <steventamm@mac.com>

	* scroll-bar.el (toggle-scroll-bar, scroll-bar-mode): Have
	scroll bars correctly default to being on the right for Mac
	Carbon port 
	
2002-12-29  Nick Roberts  <nick@nick.uklinux.net>

	* gdb-ui.el (gdb-delete-display): Rename (gdb-delete-expression).
	(gdb-goto-bp-this-line): Rename (gdb-goto-breakpoint).
	(gdb-toggle-bp-this-line): Rename (gdb-toggle-breakpoint).
	(gdb-delete-bp-this-line): Rename (gdb-delete-breakpoint).
	(gdb-toggle-disp-this-line): Rename (gdb-toggle-display).
	(gdb-delete-disp-this-line): Rename (gdb-delete-display).
	(gud-gdba-marker-filter): Remove unnecessary save-match-data.
	(gdb-mouse-goto-breakpoint, gdb-frames-select): New functions.
	(gdb-frames-mouse-select): Simplify.
	Make keybindings (gdb-goto-breakpoint, gdb-frames-select, etc)
	consistent with other modes in emacs.
	(gdb-display-source-buffer): Return window of source buffer
	for (gud-display-line).

2002-12-29  Markus Rost  <rost@math.ohio-state.edu>

	* button.el (defface button): Add group.

	* cus-edit.el (customize-browse): Call `widget-setup'.

2002-12-29  Andreas Schwab  <schwab@suse.de>

	* Makefile.in: Generate cus-load.el and finder-inf.el in the